// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tree Basic check basic render 1`] = `
<div
  class="tree"
  role="tree"
>
  <div>
    <input
      aria-label="for screen reader"
      style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
      tabindex="0"
      value=""
    />
  </div>
  <div
    aria-hidden="true"
    class="treeTreenode"
    style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden;"
  >
    <div
      class="treeIndent"
    >
      <div
        class="treeIndentUnit"
      />
    </div>
  </div>
  <div
    class=""
    style="position: relative;"
  >
    <div
      class="virtual-list-holder"
    >
      <div>
        <div
          class="virtual-list-holder-inner"
          style="display: flex; flex-direction: column;"
        >
          <div
            aria-grabbed="false"
            class="treeTreenode tree-treenode-switcher-open tree-treenode-leaf-last"
            draggable="false"
          >
            <span
              aria-hidden="true"
              class="treeIndent"
            />
            <span
              class="treeSwitcher tree-switcher_open"
            />
            <span
              class="treeCheckbox"
            />
            <span
              class="treeNodeContentWrapper treeNodeContentWrapper-open"
              title="---"
            >
              <span
                class="treeIconEle tree-icon__open"
              />
              <span
                class="treeTitle"
              >
                ---
              </span>
            </span>
          </div>
          <div
            aria-grabbed="false"
            class="treeTreenode treeTreenodeDisabled tree-treenode-switcher-open"
            draggable="false"
          >
            <span
              aria-hidden="true"
              class="treeIndent"
            >
              <span
                class="treeIndentUnit treeIndentUnit-start treeIndentUnit-end"
              />
            </span>
            <span
              class="treeSwitcher treeSwitcherNoop"
            />
            <span
              class="treeCheckbox treeCheckboxDisabled"
            />
            <span
              class="treeNodeContentWrapper treeNodeContentWrapper-normal"
              title="---"
            >
              <span
                class="treeIconEle tree-icon__docu"
              />
              <span
                class="treeTitle"
              >
                ---
              </span>
            </span>
          </div>
          <div
            aria-grabbed="false"
            class="treeTreenode tree-treenode-switcher-open tree-treenode-leaf-last"
            draggable="false"
          >
            <span
              aria-hidden="true"
              class="treeIndent"
            >
              <span
                class="treeIndentUnit treeIndentUnit-start treeIndentUnit-end"
              />
            </span>
            <span
              class="treeSwitcher treeSwitcherNoop"
            />
            <span
              class="treeCheckbox"
            />
            <span
              class="treeNodeContentWrapper treeNodeContentWrapper-normal"
              title="---"
            >
              <span
                class="treeIconEle tree-icon__docu"
              />
              <span
                class="treeTitle"
              >
                ---
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree Basic ignore illegal node as Tree children Direct TreeNode 1`] = `
<div
  class="tree"
  role="tree"
>
  <div>
    <input
      aria-label="for screen reader"
      style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
      tabindex="0"
      value=""
    />
  </div>
  <div
    aria-hidden="true"
    class="treeTreenode"
    style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden;"
  >
    <div
      class="treeIndent"
    >
      <div
        class="treeIndentUnit"
      />
    </div>
  </div>
  <div
    class=""
    style="position: relative;"
  >
    <div
      class="virtual-list-holder"
    >
      <div>
        <div
          class="virtual-list-holder-inner"
          style="display: flex; flex-direction: column;"
        >
          <div
            aria-grabbed="false"
            class="treeTreenode tree-treenode-switcher-open"
            draggable="false"
          >
            <span
              aria-hidden="true"
              class="treeIndent"
            />
            <span
              class="treeSwitcher treeSwitcherNoop"
            />
            <span
              class="treeNodeContentWrapper treeNodeContentWrapper-normal"
              title="00"
            >
              <span
                class="treeIconEle tree-icon__docu"
              />
              <span
                class="treeTitle"
              >
                00
              </span>
            </span>
          </div>
          <div
            aria-grabbed="false"
            class="treeTreenode tree-treenode-switcher-open tree-treenode-leaf-last"
            draggable="false"
          >
            <span
              aria-hidden="true"
              class="treeIndent"
            />
            <span
              class="treeSwitcher treeSwitcherNoop"
            />
            <span
              class="treeNodeContentWrapper treeNodeContentWrapper-normal"
              title="02"
            >
              <span
                class="treeIconEle tree-icon__docu"
              />
              <span
                class="treeTitle"
              >
                02
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree Basic ignore illegal node as Tree children Sub TreeNode 1`] = `
<div
  class="tree"
  role="tree"
>
  <div>
    <input
      aria-label="for screen reader"
      style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
      tabindex="0"
      value=""
    />
  </div>
  <div
    aria-hidden="true"
    class="treeTreenode"
    style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden;"
  >
    <div
      class="treeIndent"
    >
      <div
        class="treeIndentUnit"
      />
    </div>
  </div>
  <div
    class=""
    style="position: relative;"
  >
    <div
      class="virtual-list-holder"
    >
      <div>
        <div
          class="virtual-list-holder-inner"
          style="display: flex; flex-direction: column;"
        >
          <div
            aria-grabbed="false"
            class="treeTreenode tree-treenode-switcher-open"
            draggable="false"
          >
            <span
              aria-hidden="true"
              class="treeIndent"
            />
            <span
              class="treeSwitcher treeSwitcherNoop"
            />
            <span
              class="treeNodeContentWrapper treeNodeContentWrapper-normal"
              title="00"
            >
              <span
                class="treeIconEle tree-icon__docu"
              />
              <span
                class="treeTitle"
              >
                00
              </span>
            </span>
          </div>
          <div
            aria-grabbed="false"
            class="treeTreenode tree-treenode-switcher-open tree-treenode-leaf-last"
            draggable="false"
          >
            <span
              aria-hidden="true"
              class="treeIndent"
            />
            <span
              class="treeSwitcher tree-switcher_open"
            />
            <span
              class="treeNodeContentWrapper treeNodeContentWrapper-open"
              title="01"
            >
              <span
                class="treeIconEle tree-icon__open"
              />
              <span
                class="treeTitle"
              >
                01
              </span>
            </span>
          </div>
          <div
            aria-grabbed="false"
            class="treeTreenode tree-treenode-switcher-open"
            draggable="false"
          >
            <span
              aria-hidden="true"
              class="treeIndent"
            >
              <span
                class="treeIndentUnit treeIndentUnit-end"
              />
            </span>
            <span
              class="treeSwitcher treeSwitcherNoop"
            />
            <span
              class="treeNodeContentWrapper treeNodeContentWrapper-normal"
              title="010"
            >
              <span
                class="treeIconEle tree-icon__docu"
              />
              <span
                class="treeTitle"
              >
                010
              </span>
            </span>
          </div>
          <div
            aria-grabbed="false"
            class="treeTreenode tree-treenode-switcher-open tree-treenode-leaf-last"
            draggable="false"
          >
            <span
              aria-hidden="true"
              class="treeIndent"
            >
              <span
                class="treeIndentUnit treeIndentUnit-end"
              />
            </span>
            <span
              class="treeSwitcher treeSwitcherNoop"
            />
            <span
              class="treeNodeContentWrapper treeNodeContentWrapper-normal"
              title="012"
            >
              <span
                class="treeIconEle tree-icon__docu"
              />
              <span
                class="treeTitle"
              >
                012
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree Basic renders correctly 1`] = `
<div
  class="tree treeShowLine"
  role="tree"
>
  <div>
    <input
      aria-label="for screen reader"
      style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
      tabindex="0"
      value=""
    />
  </div>
  <div
    aria-hidden="true"
    class="treeTreenode"
    style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden;"
  >
    <div
      class="treeIndent"
    >
      <div
        class="treeIndentUnit"
      />
    </div>
  </div>
  <div
    class=""
    style="position: relative;"
  >
    <div
      class="virtual-list-holder"
    >
      <div>
        <div
          class="virtual-list-holder-inner"
          style="display: flex; flex-direction: column;"
        >
          <div
            aria-grabbed="false"
            class="spe treeTreenode tree-treenode-switcher-open tree-treenode-leaf-last"
            draggable="false"
          >
            <span
              aria-hidden="true"
              class="treeIndent"
            />
            <span
              class="treeSwitcher tree-switcher_open"
            />
            <span
              class="treeCheckbox"
            />
            <span
              class="treeNodeContentWrapper treeNodeContentWrapper-open"
              title="parent 1"
            >
              <span
                class="treeIconEle tree-icon__open"
              />
              <span
                class="treeTitle"
              >
                parent 1
              </span>
            </span>
          </div>
          <div
            aria-grabbed="false"
            class="treeTreenode treeTreenodeDisabled tree-treenode-switcher-open"
            draggable="false"
          >
            <span
              aria-hidden="true"
              class="treeIndent"
            >
              <span
                class="treeIndentUnit treeIndentUnit-start treeIndentUnit-end"
              />
            </span>
            <span
              class="treeSwitcher tree-switcher_open"
            />
            <span
              class="treeCheckbox treeCheckboxDisabled"
            />
            <span
              class="treeNodeContentWrapper treeNodeContentWrapper-open"
              title="leaf 1"
            >
              <span
                class="treeIconEle tree-icon__open"
              />
              <span
                class="treeTitle"
              >
                leaf 1
              </span>
            </span>
          </div>
          <div
            aria-grabbed="false"
            class="treeTreenode tree-treenode-switcher-open"
            draggable="false"
          >
            <span
              aria-hidden="true"
              class="treeIndent"
            >
              <span
                class="treeIndentUnit treeIndentUnit-start treeIndentUnit-end"
              />
              <span
                class="treeIndentUnit treeIndentUnit-start"
              />
            </span>
            <span
              class="treeSwitcher treeSwitcherNoop"
            />
            <span
              class="treeCheckbox"
            />
            <span
              class="treeNodeContentWrapper treeNodeContentWrapper-normal"
              title="leaf"
            >
              <span
                class="treeIconEle tree-icon__docu"
              />
              <span
                class="treeTitle"
              >
                leaf
              </span>
            </span>
          </div>
          <div
            aria-grabbed="false"
            class="treeTreenode tree-treenode-switcher-open tree-treenode-leaf-last"
            draggable="false"
          >
            <span
              aria-hidden="true"
              class="treeIndent"
            >
              <span
                class="treeIndentUnit treeIndentUnit-start treeIndentUnit-end"
              />
              <span
                class="treeIndentUnit treeIndentUnit-start"
              />
            </span>
            <span
              class="treeSwitcher treeSwitcherNoop"
            />
            <span
              class="treeCheckbox"
            />
            <span
              class="treeNodeContentWrapper treeNodeContentWrapper-normal"
              title="leaf"
            >
              <span
                class="treeIconEle tree-icon__docu"
              />
              <span
                class="treeTitle"
              >
                leaf
              </span>
            </span>
          </div>
          <div
            aria-grabbed="false"
            class="treeTreenode tree-treenode-switcher-open tree-treenode-leaf-last"
            draggable="false"
          >
            <span
              aria-hidden="true"
              class="treeIndent"
            >
              <span
                class="treeIndentUnit treeIndentUnit-start treeIndentUnit-end"
              />
            </span>
            <span
              class="treeSwitcher treeSwitcherNoop"
            />
            <span
              class="treeCheckbox treeCheckboxDisabled"
            />
            <span
              class="treeNodeContentWrapper treeNodeContentWrapper-normal"
              title="leaf 2"
            >
              <span
                class="treeIconEle tree-icon__docu"
              />
              <span
                class="treeTitle"
              >
                leaf 2
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree Basic renders opaque children correctly 1`] = `
<div
  class="tree"
  role="tree"
>
  <div>
    <input
      aria-label="for screen reader"
      style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
      tabindex="0"
      value=""
    />
  </div>
  <div
    aria-hidden="true"
    class="treeTreenode"
    style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden;"
  >
    <div
      class="treeIndent"
    >
      <div
        class="treeIndentUnit"
      />
    </div>
  </div>
  <div
    class=""
    style="position: relative;"
  >
    <div
      class="virtual-list-holder"
    >
      <div>
        <div
          class="virtual-list-holder-inner"
          style="display: flex; flex-direction: column;"
        >
          <div
            aria-grabbed="false"
            class="treeTreenode tree-treenode-switcher-close tree-treenode-leaf-last"
            draggable="false"
          >
            <span
              aria-hidden="true"
              class="treeIndent"
            />
            <span
              class="treeSwitcher tree-switcher_close"
            />
            <span
              class="treeNodeContentWrapper treeNodeContentWrapper-close"
              title="0"
            >
              <span
                class="treeIconEle tree-icon__close"
              />
              <span
                class="treeTitle"
              >
                0
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree Basic should support rootStyle and rootClassName 1`] = `
<div
  class="tree root-tree"
  role="tree"
  style="background-color: cyan;"
>
  <div>
    <input
      aria-label="for screen reader"
      style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
      tabindex="0"
      value=""
    />
  </div>
  <div
    aria-hidden="true"
    class="treeTreenode"
    style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden;"
  >
    <div
      class="treeIndent"
    >
      <div
        class="treeIndentUnit"
      />
    </div>
  </div>
  <div
    class=""
    style="position: relative;"
  >
    <div
      class="virtual-list-holder"
    >
      <div>
        <div
          class="virtual-list-holder-inner"
          style="display: flex; flex-direction: column;"
        >
          <div
            aria-grabbed="false"
            class="treeTreenode tree-treenode-switcher-close"
            draggable="false"
          >
            <span
              aria-hidden="true"
              class="treeIndent"
            />
            <span
              class="treeSwitcher treeSwitcherNoop"
            />
            <span
              class="treeNodeContentWrapper treeNodeContentWrapper-normal"
              title=""
            >
              <span
                class="treeIconEle tree-icon__docu"
              />
              <span
                class="treeTitle"
              >
                0
              </span>
            </span>
          </div>
          <div
            aria-grabbed="false"
            class="treeTreenode tree-treenode-switcher-close"
            draggable="false"
          >
            <span
              aria-hidden="true"
              class="treeIndent"
            />
            <span
              class="treeSwitcher treeSwitcherNoop"
            />
            <span
              class="treeNodeContentWrapper treeNodeContentWrapper-normal"
              title=""
            >
              <span
                class="treeIconEle tree-icon__docu"
              />
              <span
                class="treeTitle"
              >
                1
              </span>
            </span>
          </div>
          <div
            aria-grabbed="false"
            class="treeTreenode tree-treenode-switcher-close"
            draggable="false"
          >
            <span
              aria-hidden="true"
              class="treeIndent"
            />
            <span
              class="treeSwitcher treeSwitcherNoop"
            />
            <span
              class="treeNodeContentWrapper treeNodeContentWrapper-normal"
              title=""
            >
              <span
                class="treeIconEle tree-icon__docu"
              />
              <span
                class="treeTitle"
              >
                2
              </span>
            </span>
          </div>
          <div
            aria-grabbed="false"
            class="treeTreenode tree-treenode-switcher-close"
            draggable="false"
          >
            <span
              aria-hidden="true"
              class="treeIndent"
            />
            <span
              class="treeSwitcher treeSwitcherNoop"
            />
            <span
              class="treeNodeContentWrapper treeNodeContentWrapper-normal"
              title=""
            >
              <span
                class="treeIconEle tree-icon__docu"
              />
              <span
                class="treeTitle"
              >
                3
              </span>
            </span>
          </div>
          <div
            aria-grabbed="false"
            class="treeTreenode tree-treenode-switcher-close"
            draggable="false"
          >
            <span
              aria-hidden="true"
              class="treeIndent"
            />
            <span
              class="treeSwitcher treeSwitcherNoop"
            />
            <span
              class="treeNodeContentWrapper treeNodeContentWrapper-normal"
              title=""
            >
              <span
                class="treeIconEle tree-icon__docu"
              />
              <span
                class="treeTitle"
              >
                4
              </span>
            </span>
          </div>
          <div
            aria-grabbed="false"
            class="treeTreenode tree-treenode-switcher-close"
            draggable="false"
          >
            <span
              aria-hidden="true"
              class="treeIndent"
            />
            <span
              class="treeSwitcher treeSwitcherNoop"
            />
            <span
              class="treeNodeContentWrapper treeNodeContentWrapper-normal"
              title=""
            >
              <span
                class="treeIconEle tree-icon__docu"
              />
              <span
                class="treeTitle"
              >
                5
              </span>
            </span>
          </div>
          <div
            aria-grabbed="false"
            class="treeTreenode tree-treenode-switcher-close"
            draggable="false"
          >
            <span
              aria-hidden="true"
              class="treeIndent"
            />
            <span
              class="treeSwitcher treeSwitcherNoop"
            />
            <span
              class="treeNodeContentWrapper treeNodeContentWrapper-normal"
              title=""
            >
              <span
                class="treeIconEle tree-icon__docu"
              />
              <span
                class="treeTitle"
              >
                6
              </span>
            </span>
          </div>
          <div
            aria-grabbed="false"
            class="treeTreenode tree-treenode-switcher-close"
            draggable="false"
          >
            <span
              aria-hidden="true"
              class="treeIndent"
            />
            <span
              class="treeSwitcher treeSwitcherNoop"
            />
            <span
              class="treeNodeContentWrapper treeNodeContentWrapper-normal"
              title=""
            >
              <span
                class="treeIconEle tree-icon__docu"
              />
              <span
                class="treeTitle"
              >
                7
              </span>
            </span>
          </div>
          <div
            aria-grabbed="false"
            class="treeTreenode tree-treenode-switcher-close tree-treenode-leaf-last"
            draggable="false"
          >
            <span
              aria-hidden="true"
              class="treeIndent"
            />
            <span
              class="treeSwitcher treeSwitcherNoop"
            />
            <span
              class="treeNodeContentWrapper treeNodeContentWrapper-normal"
              title=""
            >
              <span
                class="treeIconEle tree-icon__docu"
              />
              <span
                class="treeTitle"
              >
                8
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
